// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IfSearch should not render children without context 1`] = `
<div>
  <span>
    I must not fear.
  </span>
</div>
`;

exports[`IfSearch should not render children without search context 1`] = `
<span>
  I must not fear.
</span>
`;

exports[`IfSearch should render children with search context 1`] = `
Array [
  <span>
    I must not fear.
  </span>,
  <span>
    Fear is the mind-killer.
  </span>,
]
`;
